# ezcord

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: checks.yml  python-publish.yml
docs/: conf.py  ezcord.rst  index.rst  modules.rst  requirements.txt
docs/examples/: aiosqlite.rst  dropdown_paginator.rst  embeds.rst  examples.rst  help_cmd.rst  languages.rst  localization.rst  logs.rst  main.rst  ready_event.rst
docs/examples/database/: aiosqlite.rst  database.rst  postgres.rst
docs/ezcord/: blacklist.rst  bot.rst  components.rst  embed.rst  enums.rst  errors.rst  i18n.rst  log.rst  logs.rst  modules.rst  sql.rst  times.rst  utils.rst
docs/ezcord/db/: db.rst  postgresql.rst  sqlite.rst
docs/pages/: contributing.rst  getting_started.rst
examples/: .env.example  cog_status_demo.py  custom_ready_event.py  dpy.py  dropdown_paginator.py  embed_templates.py  help_command.py  localization.py  logs.py  main.py  sqlite.py
examples/database/: example.env  postgres.py  sqlite.py
examples/localization/: commands.yaml  en.yaml  example_cog.py  example_en.yaml  localization.py  main.py
ezcord/: __init__.py  blacklist.py  bot.py  components.py  emb.py  enums.py  errors.py  i18n.py  logs.py  sql.py  times.py  utils.py
ezcord/cogs/: blacklist.py  help.py  status_changer.py
ezcord/cogs/dpy/: blacklist_setup.py  help_setup.py  status_changer_setup.py
ezcord/cogs/pyc/: blacklist_setup.py  help_setup.py  status_changer_setup.py
ezcord/db/: postgresql.py
ezcord/internal/: __init__.py  colors.py  config.py  deprecation.py  embed_templates.py  funcutils.py  ready_style.py  translation.py
ezcord/internal/dc/: __init__.py  dc_imports.py
ezcord/internal/language/: commands.py  de.json  en.json  es.json  fr.json  languages.py
ezcord/sql/: __init__.py  fake_pg.py  postgresql.py  sqlite.py
src/ezcord/: __init__.py  bot.py  components.py  emb.py  enums.py  log.py  logs.py  sql.py  times.py  translation.py  utils.py
src/ezcord/cogs/: help.py
src/ezcord/internal/: __init__.py  colors.py  embed_templates.py  funcutils.py  languages.py  ready_style.py  translation.py
src/ezcord/internal/language/: de.json  en.json  languages.py
tests/: test_general.py  test_libs.py  test_times.py  test_utils.py
zexample_bot/: test.py
