[project]
name = "ezcord"
version = "0.1.0"
description = "An easy-to-use extension for the Pycord library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["discord", "pycord", "py-cord"]
authors = [
    { name = "tibue99" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["py-cord"]

[project.urls]
"GitHub" = "https://github.com/tibue99/ezcord"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"