[project]
name = "ezcord"
description = "An easy-to-use extension for Discord.py and Pycord"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["discord", "pycord", "py-cord", "discord.py"]
authors = [
    { name = "tibue99" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "ezcord.__version__"}

[tool.setuptools.dynamic.optional-dependencies]
docs = {file = "docs/requirements.txt"}

[project.urls]
GitHub = "https://github.com/tibue99/ezcord"
Documentation = "https://ezcord.readthedocs.io"

[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"
