[metadata]
name = ezcord
version = 0.0.1
author = tibue99
description = An easy-to-use extension for the Pycord library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tibue99/ezcord
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src